--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ekaone.github.io/Dropzone-Files/",
   "name": "dropzone-files",
   "version": "1.0.0",
   "private": true,
